# AkelPaste

./: README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: base.css
src/components/: app-sidebar.tsx
src/components/FloatingTemplates/: FloatingTemplates.tsx
src/components/HomePage/: CollectionManagerDialog.tsx  HomePage.tsx  TemplateCard.tsx  index.ts
src/components/SettingsPage/: DataManagement.tsx  PinSettings.tsx  SettingsPage.tsx  index.ts
src/components/TemplateEditor/: EmojiPicker.tsx  ShortcutRecorder.tsx  TemplateEditor.tsx
src/components/ui/: button.tsx  card-templates.tsx  sidebar.tsx  slider.tsx
src/config/: languages.json
src/lib/: desktopBridge.ts
src/main/: index.ts
src/preload/: index.ts
src/renderer/: floating-templates.html  index.html
src/renderer/src/: App.tsx  floating-templates.tsx  main.tsx
src/renderer/src/assets/: base.css
src/renderer/src/components/: app-sidebar.tsx
src/renderer/src/config/: README.md  languages.json
src/renderer/src/types/: global.d.ts
src/scripts/: updateLanguage.ts
src/services/: floatingWindowService.ts
src/types/: global.d.ts
src/utils/: dataManager.ts  translations.ts
(+18 files in other folders)
